<resources>
    <string name="app_name">ShopFloor</string>
    <string name="title_activity_login">ShopFloor By KMITL</string>

    <!-- Strings related to login -->
    <string name="server_fail">Can not connect to Server</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">The username or password you’ve entered doesn’t match any account.</string>
    <string name="error_field_required">This field is required</string>
    <string name="confirm">Confirm !</string>
    <string name="want_to_exit">Are you sure you want to exit ?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>
    <string name="qrcode">QRCODE</string>
    <string name="qrcodereader">QRCODE Reader</string>


    <string name="btn_start">START</string>
    <string name="btn_send">SEND</string>
    <string name="txt_userid">USER ID</string>
    <string name="txt_password">PASSWORD</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_check">Work Order Pending</string>
    <string name="workcenter">Work Center</string>
    <string name="nextcenter">Next Center</string>
    <string name="workorder">Work Order</string>
    <string name="plant">Plant</string>
    <string name="projectno">Project No.</string>
    <string name="order_qty">Order Quantity</string>
    <string name="starttime">Start Time</string>
    <string name="finishtime">Finish Time</string>
    <string name="input_qty">Input Quantity</string>
    <string name="output_qty">Output Quantity</string>
    <string name="menu">MENU</string>
    <string name="save">SAVE</string>
    <string name="search">SEARCH</string>
    <string name="flashoff">Turn off flashlight</string>
    <string name="flashon">Turn on flashlight</string>
</resources>
