<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/view_progress" />

    <include layout="@layout/view_error" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/border_black"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/txtID"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="5"
                    android:hint="ID"
                    android:inputType="number"
                    android:selectAllOnFocus="true" />

                <ImageButton
                    android:id="@+id/btnSearch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/border_black"
                    android:src="@drawable/ic_search_black_24dp" />
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/cardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:visibility="gone"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.2"
                            android:gravity="center_vertical"
                            android:text="@string/workcenter"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_workcenter_start"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:text=""
                            android:textSize="15dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.2"
                            android:gravity="center_vertical"
                            android:text="@string/workorder"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_workorder_start"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"

                            android:gravity="center_vertical"
                            android:text=""
                            android:textSize="15dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.2"
                            android:gravity="center_vertical"
                            android:text="@string/plant"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_plant_start"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"

                            android:gravity="center_vertical"
                            android:text=""
                            android:textSize="15dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.2"
                            android:gravity="center_vertical"
                            android:text="@string/projectno"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_projectno_start"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"

                            android:gravity="center_vertical"
                            android:text=""
                            android:textSize="15dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.2"
                            android:gravity="center_vertical"
                            android:text="@string/order_qty"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_orderqty_start"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:text=""
                            android:textSize="15dp"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.2"
                            android:gravity="center_vertical"
                            android:text="@string/input_qty"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_inputqty_start"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:text=""
                            android:textColor="@color/colorAccent"
                            android:textSize="15dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:visibility="gone"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.2"
                            android:gravity="center_vertical"
                            android:text="@string/starttime"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_starttime_start"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:text=""
                            android:textSize="15dp" />
                    </LinearLayout>

                </LinearLayout>


            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabQrcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_qrcode"
        app:backgroundTint="@color/colorAccent"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp" />
</android.support.design.widget.CoordinatorLayout>


